# OwaranaiEngine

./: CMakeLists.txt  LICENSE  README.md  doc.md  main.cpp  readme.md  test.cpp  test.py
AIMoudle/: MoudleInclude.h
AIMoudle/TensorCore/: CMakeLists.txt  Tensor.cpp
AIMoudle/TensorCore/Cuda/: TensorCoreCudaHead.cuh
Application/: CMakeLists.txt
Application/GPTX/: GPT2.train.log.oe  GPTX.cpp  GPTX.h
Application/GPTX/test_res/: GPT2_l1_nh32_ne1536.train.log.oe  test.md  test_vis.py
Code/: CMakeLists.txt  ForPlatforms.h  OEDynamic.h
Code/AutomaticDifferentiation/: AutoDiffCommon.cpp  AutoDiffCommon.h  CMakeLists.txt  ComputationalGraph.cpp  ComputationalGraph.h  ComputationalNode.cpp  ComputationalNode.h  ForwardFunction.cpp  ForwardFunction.h
Code/AutomaticDifferentiation/Layers/: BaseLayer.cpp  BaseLayer.h  EmbeddingLayer.cpp  EmbeddingLayer.h  LayerNormLayer.cpp  LayerNormLayer.h  LinearLayer.cpp  LinearLayer.h  LinearSoftmaxLayer.cpp  LinearSoftmaxLayer.h  PositionalEncodingLayer.cpp  PositionalEncodingLayer.h
Code/AutomaticDifferentiation/Loss/: BaseLoss.cpp  BaseLoss.h  MSELoss.cpp  MSELoss.h
Code/AutomaticDifferentiation/Ops/: AddOps.cpp  AddOps.h  AllOpsTypeHeader.h  BaseOps.cpp  BaseOps.h  BroadCastToOps.cpp  BroadCastToOps.h  CMakeLists.txt  EleExpOps.cpp  EleExpOps.h  EleMulOps.cpp  EleMulOps.h  GenerateSignOps.cpp  GenerateSignOps.h  MatMulOps.cpp  MatMulOps.h  MeanOps.cpp  MeanOps.h  OpsFactory.h  OpsType.h  PowOps.cpp  PowOps.h  ReLUOps.cpp  ReLUOps.h  SoftmaxOps.cpp  SoftmaxOps.h  SumOps.cpp  SumOps.h  ViewOps.cpp  ViewOps.h
Code/AutomaticDifferentiation/Optimizer/: BaseOptimizer.cpp  BaseOptimizer.h  SGDOptimizer.cpp  SGDOptimizer.h
Code/BlackBoxOptimizer/: BaseBlackBoxOptimizer.cpp  BaseBlackBoxOptimizer.h  BlackBoxOptimizerInclude.h  CMakeLists.txt  NESGMMBased.h
Code/CommonDataStructure/: BaseDataLoader.cpp  BaseDataLoader.h  BaseEdge.cpp  BaseEdge.h  BaseGraph.cpp  BaseGraph.h  BaseNode.cpp  BaseNode.h  CMakeLists.txt  CommonFuncHelpers.cpp  CommonFuncHelpers.h  Dict.h  HyperElement.h  HyperElment.cpp  Log.h
Code/CommonMathMoudle/: CMakeLists.txt  DevicePointerManager.h  GPUDeviceProcess.h  MathHelpers.cpp  MathHelpers.h  OpsType.cpp  OpsType.h  Tensor.cpp  Tensor.h
Code/CommonMathMoudle/Cuda/: CMakeLists.txt  TensorCoreCudaFun.h  TensorCoreCudaHead.cuh  TensorCoreGPU.cu
Code/CommonMathMoudle/OpenGL/: GLSL.h  GLSLFunComb.h
Code/DynamicAutomaticDifferentiation/: CMakeLists.txt  DynamicTensor.cpp  DynamicTensor.h  DynamicTensorFunction.cpp  DynamicTensorNonDiff.cpp  DynamicTensorStaticOps.cpp  Optimizer.cpp  Optimizer.h
Code/DynamicAutomaticDifferentiation/DynamicLayers/: BaseDynamicLayer.cpp  BaseDynamicLayer.h  BatchNorm.cpp  BatchNorm.h  CausalSelfAttention.cpp  CausalSelfAttention.h  DynamicLayerInclude.h  Embedding.cpp  Embedding.h  FeedForwardNetworks.h  GPT2Model.cpp  GPT2Model.h  LayerNorm.cpp  LayerNorm.h  Linear.cpp  Linear.h  MLP.cpp  MLP.h  TransformerBlock.cpp  TransformerBlock.h
Code/DynamicAutomaticDifferentiation/DynamicOptimizer/: BaseDynamicOptimizer.cpp  BaseDynamicOptimizer.h  SGD.cpp  SGD.h
DataSet/: 1.烤鸭场景描述.txt
DataSet/pkduck/: pkduck.data.oe  pkduck.table.oe
OwaranaiEngine/: CMakeLists.txt  Engine.cpp  OwaranaiEngine.vcxproj  OwaranaiEngineInclude.h
OwaranaiEngine/AIMoudle/: CMakeLists.txt  Moudle.cpp  MoudleInclude.h
OwaranaiEngine/AIMoudle/ComputationalGraph/: CGNode.cpp  CGNode.h  CMakeLists.txt  MoudleInclude.h  StdInclude.h
OwaranaiEngine/AIMoudle/Helpers/: CMakeLists.txt  Hyperparameter.h  MoudleInclude.h  StdInclude.h
OwaranaiEngine/AIMoudle/Layer/: BaseLayer.cpp  BaseLayer.h  CMakeLists.txt  Hyperparameter.h  LinearLayer.cpp  LinearLayer.h  LinearLayer2D.cpp  LinearLayer2D.h  MoudleInclude.h  StdInclude.h
OwaranaiEngine/AIMoudle/LossFunction/: BaseLoss.h  CMakeLists.txt  MSELoss.h  MoudleInclude.h
OwaranaiEngine/AIMoudle/Ops/: AddOps.h  AddarrayOps.h  BaseOps.h  CMakeLists.txt  ElemulOps.h  FlattenOps.h  MatmulFirstTOps.h  MatmulOps.h  MatmulSecondOps.h  MoudleInclude.h  TensorSumOps.h
OwaranaiEngine/AIMoudle/Optimizer/: BaseOptimizer.h  CMakeLists.txt  MoudleInclude.h  SGDOptimizer.h  StdInclude.h
OwaranaiEngine/AIMoudle/TensorCore/: CMakeLists.txt  MoudleInclude.h  StdInclude.h  Tensor.cpp  Tensor.h
OwaranaiEngine/AIMoudle/TensorCore/CPUVer/: MoudleInclude.h  Tensor.cpp
OwaranaiEngine/AIMoudle/TensorCore/Cuda/: CMakeLists.txt  TensorCoreCudaHead.cuh  TensorCoreGPU.cu
OwaranaiEngine/AIMoudle/TensorCore/GPUVer/: Tensor.cpp
OwaranaiEngine/CommonMathMoudle/: CMakeLists.txt  GeometryHelpers.cpp  GeometryHelpers.h  Line.h  MathHelpers.cpp  MathHelpers.h  Matrix.cpp  MoudleInclude.h  Plane.cpp  Plane.h  Segment.cpp  Segment.h  StdInclude.h  Tensor.cpp  Tensor.h  Vector.h
OwaranaiEngine/CommonMathMoudle/Cuda/: TensorCoreCudaHead.cuh  TensorCoreGPU.cu
OwaranaiEngine/CommonMathMoudle/GeometryCore/: CMakeLists.txt  GeometryHelpers.cpp  MoudleInclude.h  StdInclude.h
OwaranaiEngine/CommonMathMoudle/TensorCore/: CMakeLists.txt  Tensor.cpp  Tensor.h
OwaranaiEngine/CommonMathMoudle/TensorCore/CPUVer/: CMakeLists.txt  Tensor.h
OwaranaiEngine/CommonMathMoudle/TensorCore/Cuda/: TensorCoreCudaHead.cuh
OwaranaiEngine/CommonMathMoudle/TensorCore/GPUVer/: CMakeLists.txt
OwaranaiEngine/GeometryMoudle/: CMakeLists.txt  GeometryHelpers.cpp  GeometryHelpers.h  Line.h  MoudleInclude.h  Plane.h  Segment.h  StdInclude.h  Vector.h  Vector_.h  convex_polygon_2d.cpp  convex_polygon_2d.h  geometry_include.h  line.h  node.cpp  node.h  plane.cpp  plane.h  polygon_2d.cpp  polygon_2d.h  polyline.h  segment.cpp  segment.h  vector.cpp  vector.h
OwaranaiEngine/TestFile/: LinearNetTest.cpp
TensorCore/: Tensor.cpp  Tensor.h  TensorInclude.h
TensorCore/Cuda/: TensorCoreCudaHead.cuh  TensorCoreGPU.cu
TestSample/: BuildCGAndAddOps.cpp  LinearLayerTest.cpp  LinearNetWork.cpp  SoftmaxOpsTest.cpp
TestSample/CausalSelfAttention_unitest/: main.cpp  test.py
TestSample/GPTX_unitest/: main.cpp
TestSample/MLP_unitest/minst_supamini/: main.cpp
lib/TensorCore/: CMakeLists.txt  Tensor.h
(+2 files in other folders)
