project(OwaranaiEngine)

cmake_minimum_required(VERSION 3.8)

add_subdirectory(CommonMathMoudle)
add_subdirectory(CommonDataStructure)
if(CGTYPE STREQUAL "STATIC")
    add_subdirectory(AutomaticDifferentiation)
elseif(CGTYPE STREQUAL "DYNAMIC")
    add_subdirectory(DynamicAutomaticDifferentiation)
else()
    message(FATAL_ERROR "An error occurred: undefined mode of computational graph!")
endif()

add_library(OwaranaiEngine STATIC Code.cpp)

target_link_libraries (OwaranaiEngine CommonMathMoudle)
target_link_libraries (OwaranaiEngine CommonDataStructure)
if(CGTYPE STREQUAL "STATIC")
    target_link_libraries (OwaranaiEngine AutomaticDifferentiation)
elseif(CGTYPE STREQUAL "DYNAMIC")
    target_link_libraries (OwaranaiEngine DynamicAutomaticDifferentiation)
else()
    message(FATAL_ERROR "An error occurred: undefined mode of computational graph!")
endif()